--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,5 @@
 name = blazing_tools
-description = Adds the usual collection of tools at high strength and speed made from the "blazing" block.
+description = Adds an axe, pick, shovel and sword at high strength and speed made from the "blazing" block.
 min_minetest_version = 5.2.0
 depends = default
 optional_depends = wielded_light, x_enchanting
